# deta_fastapi_scaffold

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .gitignore  Makefile  env-template  local_dev.sh  main.py  pyproject.toml  requirements.txt
{{cookiecutter.project_slug}}/.devcontainer/: devcontainer.json
{{cookiecutter.project_slug}}/app/: config.py  main.py
{{cookiecutter.project_slug}}/app/api/api_v1/: api.py
{{cookiecutter.project_slug}}/app/api/api_v1/endpoints/: demo.py
{{cookiecutter.project_slug}}/app/api/app/: api.py
{{cookiecutter.project_slug}}/app/api/common/: api.py
{{cookiecutter.project_slug}}/app/base/: config.py  deta_base.py  deta_drive.py  logger.py
{{cookiecutter.project_slug}}/app/event/: demo.py
{{cookiecutter.project_slug}}/app/handler/: __init__.py  demo.py
{{cookiecutter.project_slug}}/app/metric/: demo.py
{{cookiecutter.project_slug}}/app/middleware/: debug_api.py  timeout.py
{{cookiecutter.project_slug}}/app/schemas/request/: demo.py
{{cookiecutter.project_slug}}/app/schemas/response/: common.py  demo.py
{{cookiecutter.project_slug}}/app/utils/: time_layout.py  timeit.py
